--- a/client-side/src/components/App.css
+++ b/client-side/src/components/App.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Montserrat Alternates";
+  font-family: "Montserrat";
 }
 /* ==============My CSS============== */
 .message-list {
