--- a/client-side/src/components/App.css
+++ b/client-side/src/components/App.css
@@ -98,3 +98,13 @@ body {
   background-position: center center;
   background-size: cover;
 }
+
+.poster {
+  width: 100%;
+  height: 250px;
+  background-color: #0c5460;
+  background-image: none;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
