--- a/client-side/src/components/App.css
+++ b/client-side/src/components/App.css
@@ -102,7 +102,7 @@ body {
 .poster {
   width: 100%;
   height: 250px;
-  background-color: #0c5460;
+  background-color: #80bdff;
   background-image: none;
   background-repeat: no-repeat;
   background-position: center center;
